--- a/karu.html
+++ b/karu.html
@@ -16,7 +16,7 @@
 		<script src="three.js/build/three.min.js"></script>
 		<script src="three.js/build/three.js"></script>
  		// <script src="three.js/src/renderers/WebGLRenderer.js"></script>
-		<script src="three.js/src/materials/MeshPhongMaterial.js"></script>
+		// <script src="three.js/src/materials/MeshPhongMaterial.js"></script>
 		// <script src="three.js/src/loaders/MaterialLoader.js"></script>
 		// <script src="three.js/src/textures/Texture.js"></script>
 		// <script src="three.js/src/loaders/TextureLoader.js"></script>
