Funktionen ausgelagert, Items
Main.js geupdatet
karu.html entfernt
control.js erweitert
Items können aufgesammelt werden

--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
-		<title>My first Three.js app</title>
+		<title>three.js webgl - geometry - cube</title>
+		<meta charset="utf-8">
 		<style>
-			body { margin: 0; }
-			canvas { width: 100%; height: 100% }
+			body {
+				margin: 0px;
+				background-color: #000000;
+				overflow: hidden;
+			}
 		</style>
 	</head>
 	<body>
+
 		<script src="mrdoob-three.js-d6384d2/build/three.min.js"></script>
+		<script src="items.js"></script>
 		<script src="control.js"></script>
-		<script src="main.js"></script>
-		
+		<script src="main2.js"></script>
+		<script src="three.js/build/three.js"></script>
+ 		<script src="three.js/src/renderers/WebGLRenderer.js"></script>
+		<script src="three.js/src/materials/MeshPhongMaterial.js"></script>
+		<script src="three.js/src/loaders/MaterialLoader.js"></script>
+		<script src="three.js/src/textures/Texture.js"></script>
+		<script src="three.js/src/loaders/TextureLoader.js"></script>
 	</body>
 </html>
