--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<script src="mrdoob-three.js-d6384d2/build/three.min.js"></script>
 		<script src="items.js"></script>
 		<script src="control.js"></script>
-		<script src="main2.js"></script>
+		<script src="main.js"></script>
 		<script src="three.js/build/three.js"></script>
  		<script src="three.js/src/renderers/WebGLRenderer.js"></script>
 		<script src="three.js/src/materials/MeshPhongMaterial.js"></script>
