Collision Detection, Map
Erweiterung der Map, Items verteilen, Collision Test

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 		</style>
 	</head>
 	<body>
-
+		<div id="message"></div>
 		<script src="mrdoob-three.js-d6384d2/build/three.min.js"></script>
+		<script src="mrdoob-three.js-d6384d2/build/Three.js"></script>
 		<script src="items.js"></script>
 		<script src="control.js"></script>
 		<script src="main.js"></script>
