--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 		<script src="items.js"></script>
 		<script src="control.js"></script>
 		<script src="main.js"></script>
-		<script src="three.js/build/three.js"></script>
+		<!--<script src="three.js/build/three.js"></script>
  		<script src="three.js/src/renderers/WebGLRenderer.js"></script>
 		<script src="three.js/src/materials/MeshPhongMaterial.js"></script>
 		<script src="three.js/src/loaders/MaterialLoader.js"></script>
 		<script src="three.js/src/textures/Texture.js"></script>
-		<script src="three.js/src/loaders/TextureLoader.js"></script>
+		<script src="three.js/src/loaders/TextureLoader.js"></script>-->
 	</body>
 </html>
