--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
 		</style>
 	</head>
 	<body>
-		<div id="message"></div>
+		<div id="message" style="background-color:white;color:black;"></div>
 		<script src="mrdoob-three.js-d6384d2/build/three.min.js"></script>
 		<script src="mrdoob-three.js-d6384d2/build/Three.js"></script>
 		<script src="items.js"></script>
 		<script src="control.js"></script>
 		<script src="main.js"></script>
+<!---
 		<script src="three.js/build/three.js"></script>
  		<script src="three.js/src/renderers/WebGLRenderer.js"></script>
 		<script src="three.js/src/materials/MeshPhongMaterial.js"></script>
 		<script src="three.js/src/loaders/MaterialLoader.js"></script>
 		<script src="three.js/src/textures/Texture.js"></script>
 		<script src="three.js/src/loaders/TextureLoader.js"></script>
+-->
+		<div id="ThreeJS" style="z-index: 2;"></div>
 	</body>
 </html>
