Baum aus Blender, Quest-Anfang
Import von Blender-Datei (Baum) mit Collision-Detection,
Tabaluga-Quest-Startpunkt markiert

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 	<body>
 		<div id="message" style="background-color:white;color:black;"></div>
 		<script src="mrdoob-three.js-d6384d2/build/three.min.js"></script>
-		<script src="mrdoob-three.js-d6384d2/build/Three.js"></script>
+		<!--<script src="mrdoob-three.js-d6384d2/src/Three.js"></script> -->
+		<!--<script src="mrdoob-three.js-d6384d2/src/loaders/JSONLoader.js"></script> -->
+		
 		<script src="items.js"></script>
+		<script src="quest.js"></script>
 		<script src="control.js"></script>
 		<script src="main.js"></script>
 <!---
