--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<script src="mrdoob-three.js-d6384d2/build/three.min.js"></script>
 		<!--<script src="mrdoob-three.js-d6384d2/src/Three.js"></script> -->
 		<!--<script src="mrdoob-three.js-d6384d2/src/loaders/JSONLoader.js"></script> -->
-		
+		<script src="THREEx.js"></script>
 		<script src="items.js"></script>
 		<script src="quest.js"></script>
 		<script src="control.js"></script>
