--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 	<body>
 		<div id="message" style="background-color:white;color:black;"></div>
 		<script src="mrdoob-three.js-d6384d2/build/three.min.js"></script>
+		<script src="ShaderParticles.min.js"></script>
+		<script src="ShaderParticles.js"></script>
+		<script src="ShaderParticleUtils.js"></script>
+		<script src="ShaderParticleGroup.js"></script>
+		<script src="ShaderParticleEmitter.js"></script>
+
 		<!--<script src="mrdoob-three.js-d6384d2/src/Three.js"></script> -->
 		<!--<script src="mrdoob-three.js-d6384d2/src/loaders/JSONLoader.js"></script> -->
 		<script src="THREEx.js"></script>
