Skybox + Floortexture + HUD
Skybox hinzugefügt, dafür fog erstmal ausgemacht, da sonst nicht so
sichtbar.
Floortexture nun vorhanden, wird über Caros-Server bezogen
HUD mit HTML/CSS

--- a/index.html
+++ b/index.html
@@ -9,9 +9,21 @@
 				background-color: #000000;
 				overflow: hidden;
 			}
+			
+			#hud {
+				color: white;
+				font-size: 200%;
+				font-family:verdana
+				background-color:lightgrey;
+				position: absolute;
+				<!--border-style: solid;
+				border-width: 5px;
+				border-color: grey;-->
+			}
 		</style>
 	</head>
 	<body>
+		<div id="hud">Red Riding Hood <br> 100 HP <br> 0/3 Items</div>
 		<div id="message" style="background-color:white;color:black;"></div>
 		<script src="mrdoob-three.js-d6384d2/build/three.min.js"></script>
 		<script src="ShaderParticles.min.js"></script>
