--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</head>
 	<body>
 		<div id="hud">Red Riding Hood <br> 100 HP <br> 0/3 Items</div>
-		<div id="message" style="background-color:white;color:black;"></div>
+		<!--<div id="message" style="background-color:white;color:black;"></div>-->
 		<script src="mrdoob-three.js-d6384d2/build/three.min.js"></script>
 		<script src="ShaderParticles.min.js"></script>
 		<script src="ShaderParticles.js"></script>
