--- a/memoryQuest.html
+++ b/memoryQuest.html
@@ -187,6 +187,8 @@ window.onload = function () {
 				//Compare
 				if(prevState == true) {
 					console.log("Glueckwunsch!");
+					var info = document.getElementById('info');
+					info.innerHTML = "Glueckwunsch! Du hast beide Steinpilze gefunden.";
 					//End quest here
 				}
 				else {
