Refactoring and implementing MemoryQuest

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 		<script src="THREEx.js"></script>
 		<script src="items.js"></script>
 		<script src="tabalugaquest.js"></script>
+		<script src="memoryquest.js"></script>
 		<script src="control.js"></script>
 		<script src="main.js"></script>
 <!---
