--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 		<!--<script src="mrdoob-three.js-d6384d2/src/loaders/JSONLoader.js"></script> -->
 		<script src="THREEx.js"></script>
 		<script src="items.js"></script>
+		<script src="tree.js"></script>
 		<script src="tabalugaquest.js"></script>
 		<script src="memoryquest.js"></script>
 		<script src="control.js"></script>
