Memoryquest now complete + Refactoring
+ Memoryquest is now playable, but one issue is the cameraaligment.
+ HUD specific code now in hud.js
+ New function "checkPosition()" for quest inits.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 		<!--<script src="mrdoob-three.js-d6384d2/src/Three.js"></script> -->
 		<!--<script src="mrdoob-three.js-d6384d2/src/loaders/JSONLoader.js"></script> -->
 		<script src="THREEx.js"></script>
+		<script src="hud.js"></script>
 		<script src="items.js"></script>
 		<script src="tree.js"></script>
 		<script src="tabalugaquest.js"></script>
