--- a/littleredridinghood.html
+++ b/littleredridinghood.html
@@ -4,17 +4,20 @@
 		<title>Little Red Riding Hood - Menu</title>
 	</head>
 	<body>
-		<h1>Menu under construction...</h2>
-		<a href="index.html">Play</a>
-		
-		
+		<h1>Little Red Riding Hood</h2>
+			
 		<h2>Einleitung</h2>
 		<p>
-			Pasta ipsum dolor sit amet gigli vermicelloni tortellini mezzi bombardoni elicoidali mezzi bombardoni conchiglioni ciriole conchiglie farfalloni foglie d'ulivo spaghettoni gramigna fusilli bucati. Fettucelle sorprese maltagliati tuffoli lasagne cannelloni radiatori corzetti fusilli lunghi. Strozzapreti trennette ricciutelle rotelle bavettine fedelini sagne 'ncannulate mafaldine trenne cencioni pennoni orecchiette pasta al ceppo sorprese lisce. Penne orzo conchiglie maltagliati penne rigate pennoni cavatelli elicoidali fiorentine. Taglierini chifferi conchiglioni trenette taglierini.
-
-Spaghetti vermicelli casarecce rotini scialatelli spiralini fusilli bucati strozzapreti cencioni lasagnotte lumaconi casarecce fagioloni pennette spaghetti. Campanelle pici fusilli mezzelune fusilli lunghi gnocchi. Gnocchi cavatappi pizzoccheri penne rigate cellentani. Trenette maltagliati trenette spirali conchiglie trofie maltagliati sagne 'ncannulate paccheri foglie d'ulivo pasta al ceppo. Ricciutelle pennoni penne tortellini fiori trenette trennette gramigna gigli. Croxetti cencioni fettuce fusilli lunghi lasagnette fiori cavatappi penne rigate pasta al ceppo. Fusilli chifferi acini di pepe sorprese mezzani pasta fettuce fettucelle sorprese.
-
-Ziti lasagnette sagnarelli mafalde strozzapreti trenne croxetti gomito mostaccioli. Maltagliati trofie gemelli creste di galli sorprese trofie sorprese lumache fagioloni ditalini penne lisce creste di galli tortelloni capelli d'angelo lasagne mezze penne. Rotini penne zita tortelloni fettuce tortelloni tagliatelle creste di galli bucatini sagne 'ncannulate zitoni spirali mezzani pasta tortelloni fettucelle tagliatelle. Spirali fettucelle tortelloni fettuccine paccheri pennette tripoline pici vermicelloni timpano tuffoli rotini.
+			Willkommen! <br>
+			Rotkaeppchen soll ihrer Oma einen Korb vorbeibringen, jedoch fehlen noch ein paar Dinge fuer den Korb. <br>
+			Hilf Rotkaeppchen bei der Suche nach den Dingen. Doch Obacht, ein Zauber liegt auf diesem Wald und um an seine wertvollen Schaetze zu kommen,
+			musst du erst ein paar Aufgaben loesen.
+			<br>
+			Es fehlen noch ein <b>Apfel</b>, ein <b>Pilz</b> und <b>noch etwas</b>.<br>
+			Behalte jedoch die Zeit im Auge, es wird naemlich bald dunkel!<br>
+			Viel Glueck.	
 		</p>
+		
+		<a href="index.html">Play</a>
 	</body>
 </html>
