--- a/index.html
+++ b/index.html
@@ -37,15 +37,19 @@
 				top: 50%;
 			}
 		</style>
+		<script src="countdown.js"></script>	
 	</head>
 	<body>
-		<div id="hud">Red Riding Hood <br> 100 HP <br> 0/3 Items <br> score: 0</div>
+		<div id="hud">Red Riding Hood <br> 100 HP <br> 0/3 Items</div>
+		
 		<div id="control-info">
+			Nacht in: <b id="cID3">   Init<script>countdown(300,'cID3');</script></b><br>
 			Steuerung:
 			<ul>
 			<li>Up/Down arrow: Vor/Zurück
 			<li>Left/Right arrow: Links/Rechts
 			</ul>
+			
 		</div>
 
 		<div id="message"> </div>
