--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 		<!--<script src="mrdoob-three.js-d6384d2/src/Three.js"></script> -->
 		<!--<script src="mrdoob-three.js-d6384d2/src/loaders/JSONLoader.js"></script> -->
 		<script src="THREEx.js"></script>
+		<script src="endstate.js"></script>
 		<script src="hud.js"></script>
 		<script src="items.js"></script>
 		<script src="tree.js"></script>
