--- a/littleredridinghood.html
+++ b/littleredridinghood.html
@@ -13,7 +13,7 @@
 			Hilf Rotkaeppchen bei der Suche nach den Dingen. Doch Obacht, ein Zauber liegt auf diesem Wald und um an seine wertvollen Schaetze zu kommen,
 			musst du erst ein paar Aufgaben loesen.
 			<br>
-			Es fehlen noch ein <b>Apfel</b>, ein <b>Pilz</b> und <b>noch etwas</b>.<br>
+			Es fehlen noch ein <b>Apfel</b>, ein <b>Pilz</b> und <b>eine Flasche Wein</b>.<br>
 			Behalte jedoch die Zeit im Auge, es wird naemlich bald dunkel!<br>
 			Viel Glueck.	
 		</p>
