--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 		<script src="tree.js"></script>
 		<script src="tabalugaquest.js"></script>
 		<script src="memoryquest.js"></script>
+		<script src="apfelbaumquest.js"></script>
 		<script src="control.js"></script>
 		<script src="main.js"></script>
 <!---
